# kirmani-synthesis-mesh

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
kirmani_synthesis/: __init__.py  cli.py  models.py  window_summarizers.py
kirmani_synthesis/dashboard/: __init__.py  generator.py
kirmani_synthesis/detection/: __init__.py  detector.py
kirmani_synthesis/fusion/: __init__.py  engine.py
kirmani_synthesis/intelligence/: __init__.py  alpha.py  consensus.py  dashboard.py  engine.py  macro.py  real_data.py  risk.py  signal_producers.py  spp_runner.py  spp_validation.py  stier_runner.py  validation.py
kirmani_synthesis/rules/: __init__.py  engine.py
kirmani_synthesis/runners/: __init__.py  unified.py
tests/: conftest.py  test_window_summarizers.py
