[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirmani-synthesis-mesh"
version = "2.0.0"
description = "Elite Signal Synthesis Mesh - Bayesian aggregation and cross-system intelligence for 48+ trading systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kirmani Partners LP" }
]
dependencies = [
    "kirmani-signal-protocol>=1.0.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "duckdb>=0.9",
    "redis>=5.0",
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
synthesis = "kirmani_synthesis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kirmani_synthesis"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__",
]
